<resources>
    <string name="app_name">Fadecandy Android</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">stop server</string>
    <string name="start">start server</string>
    <string name="fc_title">Fadecandy Android</string>
    <string name="app_title">Fadecandy</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_status_server">stop server</string>
    <string name="menu_config_server">server configuration</string>
    <string name="menu_config_service">service configuration</string>
    <string name="menu_title_report_bugs">Report Bugs</string>
    <string name="rate_app_title">Rate this app</string>
    <string name="menu_title_open_source_components">Open Source components</string>
    <string name="menu_title_about">About</string>
    <string name="open_source_items">Open Source components</string>
    <string name="about">About</string>
    <string name="copyright">\u00a9 2016 Bertrand Martel</string>
    <string name="dialog_ok">Ok</string>
    <string name="developper_mail">bmartel.fr@gmail.com</string>
    <string name="github_link">https://github.com/akinaru/fadecandy-android</string>
    <string name="issue_object">Fadecandy Android Issue</string>
    <string name="issue_title">Report a problem</string>
    <string name="issue_message">Your error report here...</string>
    <string name="ip_list">Server IP address</string>
    <string name="port_text">Server port</string>
    <string name="configuration_server_title">server configuration</string>
    <string name="brightness">Brightness</string>
    <string name="color">Color</string>
    <string name="speed">Speed</string>
    <string name="temperature">Temperature</string>
    <string name="menu_ledstrip_config">led count configuration</string>
    <string name="led_count_text">led count</string>
    <string name="configuration_led_title">Led configuration</string>
    <string name="cancel_button">Cancel</string>
    <string name="led_count_errorcase"><![CDATA[Led count must be > 0 and <=]]></string>
    <string name="start_server_checkbox">start a local server</string>
    <string name="server_connection">connection to </string>
    <string name="server_connected">connected to </string>
    <string name="span_spark">Span</string>
    <string name="mixer_delay">Mixer delay (ms)</string>
    <string name="brightness_min">Brightness minimum</string>
    <string name="brightness_max">Brightness maximum</string>
    <string name="pulse_delay">Delay (ms)</string>
    <string name="pulse_pause">Pulse pause (ms)</string>
    <string name="server_started">server started</string>
    <string name="server_closed">server closed</string>
    <string name="failed">failed</string>
    <string name="closed">closed</string>
</resources>
