<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/server_status"
            android:icon="@drawable/ic_cancel"
            android:title="@string/menu_status_server" />

        <item
            android:id="@+id/server_config"
            android:icon="@drawable/ic_storage"
            android:title="@string/menu_config_server" />

        <item
            android:id="@+id/service_config"
            android:icon="@drawable/ic_android"
            android:title="@string/menu_config_service" />

        <!--
        <item
            android:id="@+id/update_server_config"
            android:icon="@drawable/ic_config"
            android:title="@string/menu_update_server_config" />

        <item
            android:id="@+id/update_led_count"
            android:icon="@drawable/ic_led_count"
            android:title="@string/menu_led_count" />   -->

    </group>
</menu>